adding office times
