# Api/src/routes/officeHoursControllers/putOfficeHout.ts
@@ -1,9 +1,8 @@
-import { Response } from "express";
+import { Request, Response } from "express";
 import { AppDataSource } from "../../database/dataSource";
 import logger from "../../services/logger";
 import { isUndefinedOrNull } from "../../utils/utils";
 import { z } from "zod";
-import { AuthRequest } from "../../types/express";
 import { OfficeHoursEntity } from "../../entity/OfficeHoursEntity";
 import { LocationEntity } from "../../entity/LocationEntity";
 
@@ -33,13 +32,20 @@ const OfficeHourSchema = z.object({
 
 /**
  * @openapi
- * /officeHours:
- *   post:
+ * /office-hours/{id}:
+ *   put:
  *     tags:
- *       - OfficeHour
+ *       - Office Hours
  *     security:
  *       - Authorization: []
- *     summary: Add a new Mass officeHours
+ *     parameters:
+ *       - in: path
+ *         name: id
+ *         required: true
+ *         schema:
+ *            type: integer
+ *         description: OfficeHour ID
+ *     summary: Update a Mass service
  *     requestBody:
  *       required: true
  *       content:
@@ -47,10 +53,14 @@ const OfficeHourSchema = z.object({
  *           schema:
  *             type: object
  *             properties:
- *               officeHours:
+ *               service:
  *                 type: string
  *                 example: "St Michael Parish"
- *                 description: "officeHours of the Mass"
+ *                 description: "service of the Mass"
+ *               isActive:
+ *                 type: boolean
+ *                 example: "false"
+ *                 description: "Activation state of the service"
  *     responses:
  *       200:
  *         description: OfficeHour saved successfully
@@ -64,9 +74,9 @@ const OfficeHourSchema = z.object({
  *                   example: true
  *                 message:
  *                   type: string
- *                   example: "OfficeHour saved successfully"
+ *                   example: "OfficeHour updated successfully."
  *       401:
- *         description: Invalid credentials
+ *         description: Invalid credentials!
  *         content:
  *           application/json:
  *             schema:
@@ -77,48 +87,56 @@ const OfficeHourSchema = z.object({
  *                   example: false
  *                 message:
  *                   type: string
- *                   example: "Invalid credentials"
+ *                   example: "Invalid credentials!"
+ *       404:
+ *         description: OfficeHour not found! 
  *       422:
- *         description: Validation error
+ *         description: Validation error!
  *       500:
- *         description: Internal Server error
+ *         description: Internal Server error!
  *
  */
 
 /* eslint-disable @typescript-eslint/explicit-function-return-type */
-export async function postOfficeHour(req: AuthRequest, res: Response) {
+export async function putOfficeHour(req: Request, res: Response) {
   let portalUser = req.user;
   if (isUndefinedOrNull(portalUser)) {
     return res.status(401).send({ message: "Unauthorized!" });
   }
 
-  const parsedBody = OfficeHourSchema.safeParse(req.body)
+  const parsedBody = OfficeHourSchema.safeParse(req.body);
   if (!parsedBody.success) {
     logger.error("Validation error: %o", parsedBody.error.issues);
     logger.error("Validation error: %o", req.body);
-    return res.status(422).send({ message: "Validation error" });
+    return res.status(422).send({ message: "Validation error!" });
   }
 
-  const officeHoursRepository = AppDataSource.getRepository(OfficeHoursEntity)
+  const serviceRepository = AppDataSource.getRepository(OfficeHoursEntity);
   const locationRepository =  AppDataSource.getRepository(LocationEntity)
   try {
+    const id = Number(req.params.id);
+    const oldOfficeHour = await serviceRepository.findOne({ where: { id } });
+    if (oldOfficeHour === null) {
+      return res.status(404).send({ message: "OfficeHour does not exist!" });
+    }
+
     const officeLocation =  await locationRepository.findOne({where: {id: parsedBody.data.office_place}})
-    const newOfficeHour = new OfficeHoursEntity();
-    newOfficeHour.day_en = parsedBody.data.day_en
-    newOfficeHour.day_fr = parsedBody.data.day_fr
-    newOfficeHour.day_rw = parsedBody.data.day_rw
-    if ( officeLocation !== null ) {
-      newOfficeHour.office_place = officeLocation
+     if ( officeLocation !== null ) {
+      oldOfficeHour.office_place = officeLocation
     } else {
       return res.status(404).send({ message: "Office location does not exist!" });
     }
-    newOfficeHour.time = parsedBody.data.time
-    newOfficeHour.isActive = parsedBody.data.isActive
+    oldOfficeHour.day_en = parsedBody.data.day_en
+    oldOfficeHour.day_fr = parsedBody.data.day_fr
+    oldOfficeHour.day_rw = parsedBody.data.day_rw
+    // oldOfficeHour.office_place = parsedBody.data.office_place
+    oldOfficeHour.time = parsedBody.data.time
+    oldOfficeHour.isActive = parsedBody.data.isActive
 
-    await officeHoursRepository.save(newOfficeHour)
-    return res.status(201).send({ message: "OfficeHour created successfully" });
+    await serviceRepository.save(oldOfficeHour);
+    return res.status(201).send({ message: "OfficeHour updated successfully." });
   } catch (error: any) {
-    logger.error("Adding officeHours failed with error: %s", error);
-    res.status(400).send({ success: false, message: error.message });
+    logger.error("Updating service failed: %s", error);
+    res.status(500).send({ success: false, message: "Internal server error!" });
   }
 }
